--- a/header-guest.html
+++ b/header-guest.html
@@ -2,7 +2,7 @@
 <nav class="navbar navbar-expand-lg navbar-light">
   <div class="container-fluid navbar-content">
       <a class="navbar-brand" href="/Ultimate Shoe Battle">
-          <img src="LOGO KINEME" alt="" height="85" id="headerlogo">
+          <img src="logo 2.png" alt="" height="85" id="headerlogo">
       </a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
@@ -10,10 +10,14 @@
     <div class="collapse navbar-collapse" id="navbarText">
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
         <li class="nav-item">
-          <a class="nav-link" aria-current="page" href="index.php" >Home</a>
+          <a aria-current="page" href="index.php" >
+            <button class="btn btn-primary2" id="home">Home</button>
+          </a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="shoes.php">Shoes</a>
+          <a href="shoes.php">
+            <button class="btn btn-primary1" id="shoes2">Shoes</button>
+          </a>
         </li>
         <ul class="navbar-nav">
           <li class="nav-item">
